--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.lightdream</groupId>
     <artifactId>royalsecurity</artifactId>
-    <version>1.2</version>
+    <version>1.3</version>
     <packaging>jar</packaging>
 
     <name>RoyalSecurity</name>
@@ -59,8 +59,8 @@
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
         <repository>
-            <id>lightdream-repo</id>
-            <url>https://repo.lightdream.dev/artifactory/lightdream-api-libs-release-local/</url>
+            <id>lightdream-api</id>
+            <url>https://repo.lightdream.dev/repository/LightDream-API/</url>
         </repository>
         <repository>
             <id>codemc-repo</id>
