--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.lightdream</groupId>
     <artifactId>royalsecurity</artifactId>
-    <version>1.17</version>
+    <version>1.18</version>
     <packaging>jar</packaging>
 
     <name>RoyalSecurity</name>
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>dev.lightdream</groupId>
             <artifactId>LightDreamAPI</artifactId>
-            <version>4.72</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>fr.xephi</groupId>
