--- a/pom.xml
+++ b/pom.xml
@@ -76,15 +76,31 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>dev.lightdream</groupId>
-            <artifactId>LightDreamAPI</artifactId>
-            <version>LATEST</version>
-        </dependency>
-        <dependency>
             <groupId>fr.xephi</groupId>
             <artifactId>authme</artifactId>
             <version>5.6.0-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.lightdream</groupId>
+            <artifactId>FileManager</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.lightdream</groupId>
+            <artifactId>DatabaseManager</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.lightdream</groupId>
+            <artifactId>JDAExtension</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.lightdream</groupId>
+            <artifactId>CommandManager</artifactId>
+            <version>LATEST</version>
         </dependency>
     </dependencies>
 
