--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.lightdream</groupId>
     <artifactId>royalsecurity</artifactId>
-    <version>1.21.1</version>
+    <version>1.22.0</version>
     <packaging>jar</packaging>
 
     <name>RoyalSecurity</name>
@@ -82,6 +82,15 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>LATEST</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- LightDream -->
         <dependency>
             <groupId>dev.lightdream</groupId>
             <artifactId>FileManager</artifactId>
