--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.lightdream</groupId>
-    <artifactId>royalsecurity</artifactId>
-    <version>1.22.0</version>
-    <packaging>jar</packaging>
+    <artifactId>RoyalSecurity</artifactId>
+    <version>1.22.1</version>
+    <modules>
+        <module>Plugin</module>
+        <module>Discord</module>
+    </modules>
+    <packaging>pom</packaging>
+
+    <distributionManagement>
+        <repository>
+            <id>lightdream-api</id>
+            <url>https://repo.lightdream.dev/repository/LightDream-API/</url>
+        </repository>
+    </distributionManagement>
 
     <name>RoyalSecurity</name>
 
@@ -16,38 +27,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-    </build>
 
     <repositories>
         <repository>
@@ -69,24 +48,11 @@
     </repositories>
 
     <dependencies>
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.8.8-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>fr.xephi</groupId>
-            <artifactId>authme</artifactId>
-            <version>5.6.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>LATEST</version>
+            <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
 
@@ -94,23 +60,19 @@
         <dependency>
             <groupId>dev.lightdream</groupId>
             <artifactId>FileManager</artifactId>
-            <version>LATEST</version>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>dev.lightdream</groupId>
             <artifactId>DatabaseManager</artifactId>
-            <version>LATEST</version>
+            <version>3.7.3</version>
         </dependency>
         <dependency>
             <groupId>dev.lightdream</groupId>
             <artifactId>JDAExtension</artifactId>
-            <version>LATEST</version>
+            <version>1.29</version>
         </dependency>
-        <dependency>
-            <groupId>dev.lightdream</groupId>
-            <artifactId>CommandManager</artifactId>
-            <version>LATEST</version>
-        </dependency>
+
     </dependencies>
 
 </project>
