--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Discord"]
-	path = Discord
+[submodule "TicketSystem"]
+	path = TicketSystem
 	url = https://github.com/L1ghtDream/TicketSystem
