--- a/RoyalSecurity/pom.xml
+++ b/RoyalSecurity/pom.xml
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>dev.lightdream</groupId>
             <artifactId>CommandManager</artifactId>
-            <version>LATEST</version>
+            <version>2.3.0</version>
         </dependency>
         <dependency>
             <groupId>dev.lightdream</groupId>
