--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,16 @@
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
         <repository>
-            <id>lightdream-api</id>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.org/repository/maven-public/</url>
+        </repository>
+        <repository>
+            <id>lightdream</id>
             <url>https://repo.lightdream.dev/repository/LightDream-API/</url>
         </repository>
         <repository>
-            <id>codemc-repo</id>
-            <url>https://repo.codemc.org/repository/maven-public/</url>
+            <id>mysql-driver</id>
+            <url>https://mvnrepository.com/artifact/mysql/mysql-connector-java</url>
         </repository>
     </repositories>
 
