--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,10 @@ jobs:
           distribution: 'adopt'
       - name: Git submodule update
         run: git pull --recurse-submodules
+      - name: Test
+        run: |
+          ifconfig
+          whoami
       - name: Build with Maven
         run: mvn package
       - name: Automatic Releases
