--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,22 +7,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: '8'
-          distribution: 'adopt'
-      - name: Git submodule update
-        run: git submodule update --init
-      - name: Build with Maven
-        run: mvn package
-      - name: Automatic Releases
-        uses: marvinpinto/action-automatic-releases@v1.2.1
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: false
-          title: "Latest Release"
-          files: |
-            target/*.jar
+      - name: Maven Publish
+        uses: L1ghtDream/maven-publish@1.0
